# ai-assistent

./: .env  Dockerfile  docker-compose.yaml  main.py  master_database_schema.json  pyproject.toml  template_list.json  usecase.md
src/agents/Agents_draft_VJ/report_flow_nov13/reportfloworchestrator_agent/: .env  agent.py
src/agents/Agents_draft_VJ/report_flow_nov13/reportfloworchestrator_agent/Data/: template_list.json
src/agents/Agents_draft_VJ/report_flow_nov13/reportfloworchestrator_agent/sub_agent/report_scheduling_agent/: agent.py  tool.py
src/agents/Agents_draft_VJ/report_flow_nov13/reportfloworchestrator_agent/sub_agent/template_creation_agent/: agent.py  tool.py
src/agents/Agents_draft_VJ/report_flow_nov13/reportfloworchestrator_agent/sub_agent/template_selection_agent/: agent.py  template_list.json  tool.py
src/agents/template_creation/: agent.py  tools.py
src/service/rest/: scheduler_service.py
